# benchmon

./: .gitignore  Makefile  README.md
.github/workflows/: release.yml
include/: benchmon.h
src/: benchmon_internal.h  monitor.c  setup.c  utils.c  verify.c
tests/: smoke_test.c
tui/: Cargo.toml  build.rs
tui/src/: app.rs  bindings_pregenerated.rs  ffi.rs  logger.rs  main.rs  service.rs  snapshot_store.rs
tui/src/tabs/: dashboard.rs  logs.rs  mod.rs  monitor.rs  setup.rs  terminal.rs
