[package]
name = "benchmon-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for benchmon — setup, monitoring, and statistics"
license = "MIT"

[[bin]]
name = "benchmon"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[build-dependencies]
cc = "1"
bindgen = { version = "0.70", optional = true }

[features]
default = []
bindgen = ["dep:bindgen"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
